tests/baselines/reference/superWithGenericSpecialization.errors.txt
superWithGenericSpecialization.ts(13,17): error TS2454: Variable 'd' is used before being assigned.
superWithGenericSpecialization.ts(14,18): error TS2454: Variable 'd' is used before being assigned.


==== superWithGenericSpecialization.ts (2 errors) ====
    class C<T> {
        x: T;
    }
    
    class D<T> extends C<string> {
        y: T;
        constructor() {
            super(); // uses the type parameter type of the base class, ie string
        }
    }
    
    var d: D<number>;
    var r: string = d.x;
                    ~
!!! error TS2454: Variable 'd' is used before being assigned.
    var r2: number = d.y;
                     ~
!!! error TS2454: Variable 'd' is used before being assigned.